# kaivu-agent-ts

./: .env.example  .gitignore  AGENTS.md  package-lock.json  package.json  readme_baseline.md
docs/: literature-knowledge-architecture.md  scientific-memory-design.md
examples/: openai-research.ts  simple-research.ts
examples/problem-frame-skill/: SKILL.md
laboratory/: README.md  pyproject.toml
laboratory/autosota_lab/: __init__.py  agents.py  baseline.py  claude_code.py  cli.py  code_agent.py  docker_runner.py  environment_profiles.py  io.py  llm.py  local_runner.py  models.py  onboard.py  optimize.py  pipeline.py  plot.py  prepare.py  process_utils.py  prompts.py  repo_resolver.py  research_agent.py  state.py
laboratory/scripts/: install_codex_skills.sh
public/: app.js  index.html  styles.css
src/: index.ts
src/agent/: SciAgent.ts  SpecialistAgent.ts
src/analysis/: AnomalySurpriseDetector.ts
src/assets/: ScientificAssetRegistry.ts
src/capabilities/: ScientificCapabilityRegistry.ts
src/context/: ContextPack.ts  ContextPolicy.ts
src/control/: AutonomousController.ts
src/evaluation/: ScientificEvaluationHarness.ts
src/execution/: ExperimentExecutionLoop.ts
src/graph/: ResearchGraph.ts
src/hypothesis/: HypothesisTheoryCompiler.ts
src/learning/: ScientificLearningEpisode.ts
src/literature/: LiteratureLint.ts  LiteraturePaths.ts  LiteratureReviewRuntimeStore.ts  LiteratureWikiPage.ts  PaperDigest.ts  PaperIngest.ts  WikiQuery.ts  WikiRetrieval.ts
src/loop/: ResearchState.ts  SciLoop.ts  Trajectory.ts
src/memory/: MemoryGovernance.ts  (+3 more)
(+99 files in other folders)
